2001-03-08  Andreas Schwab  <schwab@suse.de>

	* acinclude.m4 (GLIBCPP_EXPORT_INSTALL_INFO): Fix syntax in test
	command.
        * aclocal.m4, configure: Regenerated.

2001-02-21  Phil Edwards  <pme@sources.redhat.com>

	* tests_flags.in:  Remove -n flag from call to echo.

2001-03-05  Laurynas Biveinis  <lauras@softhome.net>

	* config/os/djgpp/ctype_base.h (ctype_base): Fix __to_type
	definition. Replace enum with static const variables.
		
	* config/os/djgpp/ctype_inline.h (ctype<char>::is): Remove
	throw specification, fix typos, use <static_cast>.
	(ctype<char>::scan_is): Remove throw specification.
	(ctype<char>::scan_not): Likewise.
						
	* config/os/djgpp/ctype_noninline.h (ctype<char>::ctype): Fix typo.
	(ctype<char>::do_toupper(char)): Use <static_cast>.
	(ctype<char>::do_toupper(char *, const char *)): Likewise.
	(ctype<char>::do_tolower(char)): Likewise.
	(ctype<char>::do_tolower(char *, const char *)): Likewise.
											
2001-02-27  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/1886
	* include/bits/basic_file.h: Include basic_file_model.h.
	* config/c_io_libio.cc: Move to...
	* config/basic_file_libio.cc: Here.
	* config/basic_file_libio.h: New file.
	* config/c_io_stdio.cc: Move to...
	* config/basic_file_stdio.cc: Here.
	* config/basic_file_stdio.h: New file.
	* config/c_io_libio.h: Tweak.
	* config/c_io_stdio.h: Tweak.
	* src/Makefile.am (build_headers): Add basic_file_model.h.
	(sources): Add basic_file.cc, remove c++io.cc.
	* src/Makefile.in: Regenerate.
	* acinclude.m4 (GLIBCPP_ENABLE_CSTDIO): Add support for
	basic_file_model.h and basic_file.cc.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* testsuite/27_io/filebuf.cc (test05): Add regression.

2001-02-27  Benjamin Kosnik  <bkoz@redhat.com>

	Correct license.
	* config/cpu/alpha/bits/atomicity.h: Change.
	* config/cpu/arm/bits/atomicity.h
	* config/cpu/generic/bits/atomicity.h
	* config/cpu/i386/bits/atomicity.h
	* config/cpu/i486/bits/atomicity.h